dev/helloworld/helloworld-ingress.yaml
# combined ingress being tracked here: https://github.com/kubernetes-sigs/aws-alb-ingress-controller/issues/688

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: helloworld-ingress
spec:
  rules:
    - host: helloworld.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: helloworld
              servicePort: 80
